<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" android:orientation="horizontal"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">
            <TextView
                android:id="@+id/tvScanSsid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_ssid"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:ellipsize="end"
                android:lines="1"/>
            <TextView
                android:id="@+id/tvScanBssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_bssid"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:ellipsize="end"
                android:lines="1"/>
            <TextView
                android:id="@+id/tvScanChannel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_channel"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:ellipsize="end"
                android:lines="1"/>
            <TextView
                android:id="@+id/tvScanfrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_frequency"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:ellipsize="end"
                android:lines="1"/>
            <TextView
                android:id="@+id/tvScanRssi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_rssi"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:ellipsize="end"
                android:lines="1"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>
</LinearLayout>